--- a/frontend/src/pages/Login/styles.css
+++ b/frontend/src/pages/Login/styles.css
@@ -1,18 +1,33 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
 
-.login-container{
+.container{
     max-width: 100vw;
+    max-height: 100vh;
     width: 100%;
     height: 100vh;
 
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-container{
+    max-width: 68vw;
+    width: 100%;
+
+    display: flex;
     align-items: center;
     justify-content: space-between;
+
+    border-radius: 20px;
+    box-shadow: 0px 0px 25px #b8b8c5;
 }
 
 .login-container img{
-    max-width: 42vw;
+    max-width: 42%;
     width: 100%;
+
+    border-radius: 20px;
 }
 
 .login-container .form-container{
